@@ -1,6 +1,0 @@
-<%
-for @context in @contexts
-  @not_done = @context.find_not_done_todos
--%>
-  <%= build_text_page( @not_done, @context ) %>
-<% end -%>
