@@ -1,0 +1,5 @@
+<%
+for @context in @contexts
+-%>
+  <%= build_text_page( @todos, @context ) %>
+<% end -%>
